--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   scrollbar-width: thin;
-}
+} */
 
 *::-webkit-scrollbar {
   background-color: transparent;
